# herescript

./: .gitignore  CHANGELOG.md  Justfile  Makefile  README.md  herescript.c  install.sh  runscript.c  test-herescript.c
.github/: copilot-instructions.md
.github/workflows/: build-and-test.yml  release-check.yml  release.yml
_build/: runscript
docs/: definition-of-done.md
docs/decisions/0000-header-line-syntax/: 0000-header-line-syntax.md
docs/decisions/0002-extend-single-file-capability/: 0002-extend-single-file-capability.md
docs/tasks/: 001-initial-dev.md  002-test-program.md  003-main-spec.md  004-write-self-tests.md  005-help-option.md  006-gh-workflows.md  007-new-spec.md  008-current-dir.md  009-unset-undefined.md  010-command-substitution.md  2026-01-11-initial-dev.md  2026-01-12a-test-program.md  2026-01-12b-main-spec.md  2026-02-18-write-self-tests.md  2026-02-19-help-option.md  2026-02-21-gh-workflows.md  2026-02-21-new-spec.md  2026-02-24-pipe.md  2026-04-18-14:41-current-dir.md  2026-04-18-current-dir.md  README.md
functests/: Justfile  README.md  basic.yaml  functest.py  pyproject.toml
scripts/: check-changelog.py  extract-changelog.py
smoketests/: smoketest.sh
tests/: test_unit.c
