[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "functests"
version = "0.1.0"
description = "Functional test runner for runscript"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.3",
]

[project.scripts]
functest = "functest:main"

[tool.hatch.build.targets.wheel]
include = ["functest.py"]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
]
